--- a/news/src/styles/Home.css
+++ b/news/src/styles/Home.css
@@ -13,7 +13,7 @@
 }
 
 .alert {
-    width: 22%;
+    width: 25%;
     margin-left: 35px;
     height: 450px;
     background-color: hsl(240, 100%, 5%) !important;
@@ -27,7 +27,7 @@
 
 p {
     color: rgba(255, 255, 255, 0.423);
-    width: 80%;
+    width: 50%;
 }
 
 h4 {
@@ -47,11 +47,12 @@ h4 {
   margin-bottom: 200px;
 }
 */
-h1 {
+.main-title {
     position: absolute;
-    margin-left: 24%;
-    top: 55%;
-    width: 15%;
+    margin-left: 25%;
+    top: 52%;
+    width: 14%;
+    font-size: 45px;
     font-family: "Archivo Black", sans-serif;
 }
 
@@ -60,6 +61,7 @@ h1 {
     top: 55%;
     margin-left: 41%;
     width: 15%;
+    font-size: 17px;
     color: black;
 }
 
@@ -68,7 +70,7 @@ h1 {
     position: absolute;
     background-color: hsl(5, 85%, 63%)!important;
     color: rgb(255, 255, 255)!important;
-    top: calc(68% + 1em);
+    top: calc(67% + 1em);
     left: 41%;
 }
 
